
 OpenSSL CHANGES
 _______________

 Changes between 0.9.8g and 0.9.9  [xx XXX xxxx]

  *) Removed effectively defunct crypto/store from the build.
     [Ben Laurie]

  *) Revamp of STACK to provide stronger type-checking. Still to come:
     TXT_DB, bsearch(?), OBJ_bsearch, qsort, CRYPTO_EX_DATA, ASN1_VALUE,
     ASN1_STRING, CONF_VALUE.
     [Ben Laurie]

  *) Add a new SSL_MODE_RELEASE_BUFFERS mode flag to release unused buffer
     RAM on SSL connections.  This option can save about 34k per idle SSL.
     [Nick Mathewson]

  *) Revamp of LHASH to provide stronger type-checking. Still to come:
     STACK, TXT_DB, bsearch, qsort.
     [Ben Laurie]

  *) Not all of this is true any longer.
     Will have to be updated to reflect all subsequent changes to cryptlib.c.
                                                                       --bodo


     To support arbitrarily-typed thread IDs, deprecate the existing
     type-specific APIs for a general purpose CRYPTO_THREADID
     interface. Applications can choose the thread ID
     callback type it wishes to register, as before;

        void CRYPTO_set_id_callback(unsigned long (*func)(void));
        void CRYPTO_set_idptr_callback(void *(*func)(void));

     but retrieval, copies, and comparisons of thread IDs are via
     type-independent interfaces;

        void CRYPTO_THREADID_set(CRYPTO_THREADID *id);
        void CRYPTO_THREADID_cmp(const CRYPTO_THREADID *id1,
                                 const CRYPTO_THREADID *id2);
        void CRYPTO_THREADID_cpy(CRYPTO_THREADID *dst,
                                 const CRYPTO_THREADID *src);

     Also, for code that needs a thread ID "value" for use in
     hash-tables or logging, a "hash" is available by;

        unsigned long CRYPTO_THREADID_hash(const CRYPTO_THREADID *id);

     This hash value is likely to be the thread ID anyway, but
     otherwise it will be unique if possible or as collision-free as